Update chatbotId in index.html

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   <!-- ONLY the embed, NO custom form code -->
   <script>
     window.embeddedChatbotConfig = {
-      chatbotId: "XVyXRXhG6vCPUR_KFObQL",
+      chatbotId: "oZmmSPQbRHs0pebKvzKbS",
       domain: "www.chatbase.co"
     };
   </script>
   <script
     src="https://www.chatbase.co/embed.min.js"
-    chatbotId="XVyXRXhG6vCPUR_KFObQL"
+    chatbotId="oZmmSPQbRHs0pebKvzKbS"
     domain="www.chatbase.co"
     defer>
   </script>
